<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Message</string>
    <string name="button_send">send</string>
    <string name="heading">My Nano Degree Apps</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="my_own_app">Capstone: My Own App</string>
</resources>
